--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,6 +2,7 @@
     <a class="navbar-brand" href="/"><span style="color:red">Ya</span>tube</a>
     <nav class="my-2 my-md-0 mr-md-3">
         {% if user.is_authenticated %}
+        <a class="header_lincs_post" href="{% url 'new_post' %}">Новый пост</a>
         Пользователь: {{ user.username }}.
         <a class="p-2 text-dark" href="{% url 'password_change' %}">Изменить пароль</a>
         <a class="p-2 text-dark" href="{% url 'logout' %}">Выйти</a>
