--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,14 +1,48 @@
-<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="/"><span style="color:red">Ya</span>tube</a>
-    <nav class="my-2 my-md-0 mr-md-3">
-        {% if user.is_authenticated %}
-          <a class="header_lincs_post" href="new_post">Новый пост</a>
-          Пользователь: {{ user.username }}.
-          <a class="p-2 text-dark" href="{% url 'password_change' %}">Изменить пароль</a>
-          <a class="p-2 text-dark" href="{% url 'logout' %}">Выйти</a>
-        {% else %}
-          <a class="p-2 text-dark" href="{% url 'login' %}">Войти</a> |
-          <a class="p-2 text-dark" href="{% url 'signup' %}">Регистрация</a>
-        {% endif %}
-    </nav>
-</nav>
+{% extends "base.html" %}
+{% block title %}Новый пост{% endblock %}
+{% block content %}
+{% load user_filters %}
+
+<div class="row justify-content-center">
+    <div class="col-md-8 p-5">
+        <div class="card">
+            <div class="card-header">Новый пост</div>
+            <div class="card-body">
+
+                    {% for error in form.errors %}
+                        <div class="alert alert-danger" role="alert">
+                            {{ error }}
+                        </div>
+                    {% endfor %}
+
+
+                <form method="post">
+                    {% csrf_token %}
+
+                    {% for field in form %}
+                        <div class="form-group row" aria-required={% if field.field.required %}"true"{% else %}"false"{% endif %}>
+                                <label for="{{ field.id_for_label }}" class="col-md-4 col-form-label text-md-right">
+                                    {{ field.label }}
+                                    {% if field.field.required %}<span class="required">*</span>{% endif %}</label>
+                                <div class="col-md-6">
+                                    {{ field|addclass:"form-control"  }}
+                                    {% if field.help_text %}
+                                    <small id="{{ field.id_for_label }}-help" class="form-text text-muted">{{ field.help_text|safe }}</small>
+                                    {% endif %}
+                                </div>
+                        </div>
+                    {% endfor %}
+
+                    <div class="col-md-6 offset-md-4">              
+                            <button type="submit" class="btn btn-primary">
+                                Опубликовать
+                            </button>
+                    </div>
+                </form>
+            </div> <!-- card body -->
+        </div> <!-- card -->
+    </div> <!-- col -->
+</div> <!-- row -->
+
+{% endblock %}
+
