--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,12 @@
 
 {% for post in posts %}
   <h3>
-    Автор: {{ post.author.get_full_name }},
+    Автор: {{ post.author.get_full_name }} |
     Дата публикации: {{ post.pub_date|date:"d M Y" }}
+    {% if not post.group is None %}
+      | Группа: 
+      <a href="{% url 'group_posts' slug=post.group.slug %}">{{ post.group.title }}</a>
+    {% endif %}
   </h3>
   <p>{{ post.text|linebreaksbr }}</p>
   {% if not forloop.last %}<hr>{% endif %}
