--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
         <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
     </head>
     <body>
-        {% include 'nav.html' %}
+        {% block header %}{% endblock header %}
         <main>
             <div class="container">
                 {% block content %}
