--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 {% block title %}Новый пост{% endblock %}
+
+{% block header %}
+
+{% include 'nav.html' %}
+
+{% endblock %}
+
 {% block content %}
 {% load user_filters %}
 
