--- a/templates/base.html
+++ b/templates/base.html
@@ -6,19 +6,22 @@
       <title>{% block title %}The Last Social Media You'll Ever Need{% endblock %} | Yatube</title>
       <!-- Загрузка статики -->
       {% load static %}
-        <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
-        <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
-        <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+      <link rel="stylesheet" href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}">
+      <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+      <script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    {% block header %}{% endblock header %}
-      <main>
-        <div class="container">
-    {% block content %}
-    <!-- Содержимое страницы -->
-    {% endblock content %}
-        </div>
-      </main>
+    {% include 'nav.html' %}
+    <main>
+      <div class="container">
+        </br>
+        <h1>{% block header %}{% endblock header %}</h1>
+        </br>
+        {% block content %}
+          <!-- Содержимое страницы -->
+        {% endblock content %}
+      </div>
+    </main>
     {% include 'footer.html' %}
   </body>
 </html>
