--- a/templates/group.html
+++ b/templates/group.html
@@ -1,15 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Записи сообщества {{ group }}{% endblock %}
+{% block title %} Записи сообщества {{ group }}{% endblock %}
 
-{% block header %}
-  {% include 'nav.html' %}
-{% endblock %}
+{% block header %} Записи сообщества {{ group.title }}{% endblock %}
 
 {% block content %}
-
-</br>
-<h1>{{ group.title }}</h1>
-</br>
 
 <p>{{ group.description|linebreaksbr }}</p>
 {% for post in posts %}
