--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,10 @@
 {% block title %}Последние обновления на сайте{% endblock %}
 
 {% block header %}
-  {% include 'nav.html' %}
+  Последние обновления на сайте
 {% endblock %}
 
 {% block content %}
-
-</br>
-<h1>Последние обновления на сайте</h1>
-</br>
 
 {% for post in posts %}
   <h3>
