--- a/templates/group.html
+++ b/templates/group.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %} Записи сообщества {{ group }}{% endblock %}
 
-{% block header %} Записи сообщества {{ group.title }}{% endblock %}
+{% block header %}{{ group.title }}{% endblock %}
 
 {% block content %}
 
