--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
   <h3>
     Автор: {{ post.author.get_full_name }} |
     Дата публикации: {{ post.pub_date|date:"d M Y" }}
-    {% if not post.group is None %}
+    {% if post.group %}
       | Группа: 
-      <a href="{% url 'group_posts' slug=post.group.slug %}">{{ post.group.title }}</a>
+      <a href="{% url 'group_posts' post.group.slug %}">{{ post.group.title }}</a>
     {% endif %}
   </h3>
   <p>{{ post.text|linebreaksbr }}</p>
