--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -13,7 +13,7 @@
           {% for error in form.errors %}
             <div 
               class="alert alert-danger"
-                role="alert"
+              role="alert"
             >
                   {{ error }}
             </div>
@@ -57,10 +57,7 @@
 
             <div class="col-md-6 offset-md-4">              
               <button type="submit"
-                class="btn btn-primary"
-              >
-                Опубликовать
-              </button>
+                class="btn btn-primary">Опубликовать</button>
             </div>
           </form>
         </div> <!-- card body -->
