--- a/templates/about/author.html
+++ b/templates/about/author.html
@@ -12,7 +12,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <div class="h3">
-                  <a href="{% url 'about:author' %}">Об авторе</a>
+                  Об авторе
                 </div> 
               </li>
               <li class="list-group-item">
