added short texts in author and tech htmls

--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -28,7 +28,12 @@
       <div class="col-md-9">
         <div class="card-body">                    
           <div class="card-text">
-            <p>Текст страницы "Технологии"</p>
+            <p>
+              Для создания этого проекта используется Фреймворк Django. 
+              Благодаря ему код храниться в определённых папочках приложений, 
+              все структурированно, красиво и удобно. В этом Фреймворке есть большое 
+              количество библиотек, которые одержат удобные функции и методы для работы.
+            </p>
           </div>                    
         </div>                
       </div>            
