--- a/templates/about/author.html
+++ b/templates/about/author.html
@@ -28,7 +28,12 @@
       <div class="col-md-9">
         <div class="card-body">                    
           <div class="card-text">
-            <p>Текст страницы "Об авторе"</p>
+            <p>
+              Привет, я - Мари! мне 27 и я начинающий backend developer.
+              Ранее я работала юристом по интеллектуальной собственности в IT сфере.
+              Проработав 2 года в IT компании прониклась этой темой, 
+              а коллеги вдохновили на разработку.
+            </p>
           </div>                    
         </div>                
       </div>            
