--- a/templates/about/tech.html
+++ b/templates/about/tech.html
@@ -3,6 +3,7 @@
 {% block title %}Технологии{% endblock %}
 {% block content %}
 {% load user_filters %}
+{% load static %}
   <main role="main" class="container">
     <div class="row">
       <!-- Левый вспомогательный блок -->
@@ -16,8 +17,11 @@
                 </div> 
               </li>
               <li class="list-group-item">
+                <p>
+                  <img src="{% static 'images/workspace.jpg' %}" alt="Work space photo">
+                </p>
                 <div class="h6 text-muted">
-                  Полезный короткий текст
+                  На самом деле это другой ноутбук
                 </div>
               </li>
             </ul>                                               
@@ -30,9 +34,10 @@
           <div class="card-text">
             <p>
               Для создания этого проекта используется Фреймворк Django. 
-              Благодаря ему код храниться в определённых папочках приложений, 
-              все структурированно, красиво и удобно. В этом Фреймворке есть большое 
-              количество библиотек, которые одержат удобные функции и методы для работы.
+              Благодаря ему код хранится в определённых папочках приложений, 
+              все структурировано, красиво и удобно. В этом Фреймворке есть большое 
+              количество библиотек, которые cодержат удобные функции и методы для работы.
+              Для хранения кода ипользуется система конроля версий Git.
             </p>
           </div>                    
         </div>                
