profile.html works

--- a/templates/about/author.html
+++ b/templates/about/author.html
@@ -21,7 +21,7 @@
                   <img src="{% static 'images/author.jpg' %}" alt="Author's photo">
                 </p>
                 <div class="h6 text-muted">
-                  Привет
+                  Привет, я - Мари!
                 </div>
               </li>
             </ul>                                               
@@ -33,7 +33,7 @@
         <div class="card-body">                    
           <div class="card-text">
             <p>
-              Привет, я - Мари! мне 27 и я начинающий backend developer.
+              Мне 27 и я начинающий backend developer.
               Ранее я работала юристом по интеллектуальной собственности в IT сфере.
               Проработав 2 года в IT компании прониклась этой темой, 
               а коллеги вдохновили на разработку.
