--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,56 +1,57 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="row">
-            <div class="col-md-3 mb-3 mt-1">
-                    <div class="card">
-                            <div class="card-body">
-                                    <div class="h2">
-                                        <!-- Имя автора -->
-                                        {{ author.get_full_name }}
-                                    </div>
-                                    <div class="h3 text-muted">
-                                         <!-- username автора -->
-                                         {{ author.username }}
-                                    </div>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">
-                                            <div class="h6 text-muted">
-                                            Подписчиков: XXX <br />
-                                            Подписан: XXX
-                                            </div>
-                                    </li>
-                                    <li class="list-group-item">
-                                            <div class="h6 text-muted">
-                                                <!-- Количество записей -->
-                                                Записей: {{ posts_count }}
-                                            </div>
-                                    </li>
-                            </ul>
-                    </div>
+  <div class="row">
+    <div class="col-md-3 mb-3 mt-1">
+      <div class="card">
+        <div class="card-body">
+          <div class="h2">
+            <!-- Имя автора -->
+            {{ author.get_full_name }}
+          </div>
+          <div class="h3 text-muted">
+            <!-- username автора -->
+            {{ author.username }}
+          </div>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="h6 text-muted">
+              Подписчиков: XXX <br />
+              Подписан: XXX
             </div>
-
-            <div class="col-md-9">                
-                {% for post in page %}
-                <!-- Начало блока с отдельным постом --> 
-                    <div class="card mb-3 mt-1 shadow-sm">
-                            <div class="card-body">
-                                    <p class="card-text">
-                                            <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
-                                            <a href="/{{ post.author.username }}/"><strong class="d-block text-gray-dark">@{{ post.author.username }}</strong></a>
-                                            <!-- Текст поста -->
-                                            {{ post.text|linebreaksbr }}
-                                    </p>
-                                    
-                            </div>
-                    </div>
-                {% endfor %}
-
-                <!-- Остальные посты -->  
-
-                <!-- Здесь постраничная навигация паджинатора -->
-                {% include "paginator.html" %}
-     </div>
+          </li>
+          <li class="list-group-item">
+            <div class="h6 text-muted">
+              <!-- Количество записей -->
+              Записей: {{ posts_count }}
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
-{% endblock %} 
+
+    <div class="col-md-9">
+      {% for post in page %}
+        <!-- Начало блока с отдельным постом -->
+        <div class="card mb-3 mt-1 shadow-sm">
+          <div class="card-body">
+            <p class="card-text">
+              <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
+              <a href="/{{ post.author.username }}/"><strong class="d-block text-gray-dark">@{{
+                  post.author.username }}</strong></a>
+              <!-- Текст поста -->
+              {{ post.text|linebreaksbr }}
+            </p>
+
+          </div>
+        </div>
+      {% endfor %}
+
+      <!-- Остальные посты -->
+
+      <!-- Здесь постраничная навигация паджинатора -->
+      {% include "paginator.html" %}
+    </div>
+  </div>
+{% endblock %}
