--- a/templates/profile.html
+++ b/templates/profile.html
@@ -38,12 +38,21 @@
           <div class="card-body">
             <p class="card-text">
               <!-- Ссылка на страницу автора в атрибуте href; username автора в тексте ссылки -->
-              <a href="/{{ post.author.username }}/"><strong class="d-block text-gray-dark">@{{
-                  post.author.username }}</strong></a>
+              <a href="/{{ post.author.username }}/"><strong class="d-block text-gray-dark">
+                @{{ author.username }}</strong></a>
               <!-- Текст поста -->
               {{ post.text|linebreaksbr }}
             </p>
-
+            <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group ">
+                        <!-- Ссылка на страницу записи в атрибуте href-->
+                        <a class="btn btn-sm text-muted" href="/{{ post.author.username }}/{{ post.id }}/" role="button">Добавить комментарий</a>
+                        <!-- Ссылка на редактирование, показывается только автору записи -->
+                        <a class="btn btn-sm text-muted" href="/{{ post.author.username }}/{{ post.id }}/edit" role="button">Редактировать</a>
+                </div>
+                <!-- Дата публикации  -->
+                <small class="text-muted">{{ post.pub_date|date:"d M Y" }}</small>
+        </div>
           </div>
         </div>
       {% endfor %}
