--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 
 {% for post in page %}
   <h3>
-    Автор: {{ post.author.get_full_name }} |
+    Автор: <a href="/{{ post.author.username }}/">{{ post.author.get_full_name }}</a> |
     Дата публикации: {{ post.pub_date|date:"d M Y" }}
     {% if post.group %}
       | Группа: 
