--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -7,7 +7,11 @@
   <div class="row justify-content-center">
     <div class="col-md-8 p-5">
       <div class="card">
-        <div class="card-header">Новый пост</div>
+        {% if edit == True %}
+          <div class="card-header">Редактировать запись</div>
+        {% else %}
+          <div class="card-header">Добавить запись</div>
+        {% endif %}
         <div class="card-body">
 
           {% for error in form.errors %}
@@ -55,9 +59,14 @@
               </div>
             {% endfor %}
 
-            <div class="col-md-6 offset-md-4">              
-              <button type="submit"
-                class="btn btn-primary">Опубликовать</button>
+            <div class="col-md-6 offset-md-4">
+              {% if edit == True %}              
+                <button type="submit"
+                  class="btn btn-primary">Добавить</button>
+              {% else %}
+                <button type="submit"
+                  class="btn btn-primary">Сохранить</button>
+              {% endif %}
             </div>
           </form>
         </div> <!-- card body -->
